fix wrap

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -47,7 +47,8 @@
 
 
 
-@media screen and (max-width:800px) {
+
+@media screen and (max-width:500px) {
     html, body {
         position: fixed;
         top: 0; 
