--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -653,6 +653,7 @@ pre tt:after {
 .page-detail {
   padding-top: 20px;
   margin-left: 5%;
+  min-width: 100px;
 }
 
 
@@ -700,7 +701,7 @@ font-style: italic;
   margin-right: 10vw;
 }
 .random-photo {
-  width: 1500px;
+  width: 1000px;
   height: 900px;
   z-index: 0;
   position: absolute;
@@ -743,9 +744,11 @@ p.contact, p.contact a {
   margin-right: 25vw;
 }
 
+.row {
+  flex-wrap: none !important;
+}
 
-
-@media only screen and (min-width: 320px) and (max-width: 740px) {
+@media only screen and (min-width: 320px) and (max-width: 500px) {
   .contact {
     display: none;
   }
