--- a/src/css/pageDetail.css
+++ b/src/css/pageDetail.css
@@ -37,7 +37,7 @@
   color: black;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
 
 
     .center-twenties {
